--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,67 @@
 .button-container {
-    display: flex;
-    background-color: black;
-    width: 50px;
-    height: 40px;
-    align-items: center;
-    justify-content: space-around;
+  display: flex;
+  background-color: black;
+  width: 50px;
+  height: 40px;
+  align-items: center;
+  justify-content: space-around;
+}
+.button-container:hover {
+  background-color: #f96a00;
+}
+.button {
+  outline: 0 !important;
+  border: 0 !important;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  transition: all ease-in-out 0.3s;
+  cursor: pointer;
+}
 
-  }
-  .button-container:hover {
-    background-color: #F96A00;
-  }
-  .button {
-    outline: 0 !important;
-    border: 0 !important;
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    background-color: transparent;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #fff;
-    transition: all ease-in-out 0.3s;
-    cursor: pointer;
-  }
-  
-  .button:hover {
-    transform: translateY(-3px);
-  }
-  
-  .icon {
-    font-size: 20px;
-  }
+.button:hover {
+  transform: translateY(-3px);
+}
 
+.icon {
+  font-size: 20px;
+}
+
+.mobile-header {
+  animation-duration: 0.5s;
+}
+
+.mobile-header-open {
+  animation-name: slideInLeft;
+}
+
+.mobile-header-close {
+  animation-name: slideOutRight;
+}
+
+@keyframes slideInLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+}
+
+@keyframes slideOutRight {
+  from {
+    opacity: 1;
+    transform: translateX(0%);
+  }
+  to {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+}
